syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";

package custom;

service Custom {
  
  rpc GetInfo (GetInfoRequest) returns (GetInfoReply);
}
message GetInfoRequest{
	int32 id=1;
}
message GetInfoReply{
	string name=1;
}